# sigo

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  go.mod  go.sum  go.work.sum
builder/: build.go  env.go  errors.go  graph.go  importer.go  init.go  library.go  options.go  picolibc.go  program.go  program.go_  staging.go  targets.go  targets.yaml  toolchain.go
clang/: clang.go  clang.i  clang_wrap.c
cmd/csp-gen/: main.go
cmd/llvmTest/: main.go
cmd/sigoc/: build.go  main.go  root.go
cmd/svd-gen/: main.go
compiler/: Target.go  binop.go  binop_test.go  builtin.go  compiler.go  compiler_test.go  const.go  debug.go  dwarf.go  errors.go  expr.go  func.go  gc.go  intrinsics.go  options.go  primitives.go  print.go  ssa-alloc.go  ssa.go  target.go  typeinfo.go  types.go  unop.go  values.go
compiler/ssa/: arith.go  attr.go  builder.go  builtin.go  call.go  chan.go  compare.go  cond.go  const.go  context.go  conversion.go  emit.go  format.go  func.go  intrinsic.go  lit.go  location.go  program.go  ssa_test.go  symbol.go  types.go  util.go  value.go  values.go
compiler/testutil/: testutil.go
goir/: .clang-format  CMakeLists.txt
goir/go-opt/: CMakeLists.txt  go-opt.cxx
goir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
goir/test/CAPI/: CMakeLists.txt  cgoir-test.c
goir/test/Go/: go-ops.mlir  go-opt.mlir  go-types.mlir  lower-alloc.mlir_
llvm/: dwarf.go  enums.go  llvm.go  llvm.i  llvm_wrap.c  panic.go  panic.h  panic_linux.c  panic_linux.go  panic_windows.c  wrappers.go
mlir/: mlir.i  wrappers.go
src/: index.yaml
targets/: targets.go  targets.yaml
(+312 files in other folders)
